--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 								<region>us-east-1</region>
 								<workers>1</workers>
 								<workerType>MICRO</workerType>
+								<objectStoreV2>true</objectStoreV2>
 								<properties>
 									<http.port>8081</http.port>
 									<env>test</env>
